# opencv_c

./: .gitignore  CMakeLists.txt  README.md
showimg/: main.cpp  matchtemplate.cpp
sourcecode_analysis/: linemod.cpp  linemod.hpp
